<resources>
    <string name="app_name">Projek Akhir DTS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Tidak memiliki akun? <b>Klik disini</b></string>
    <string name="register">Register</string>
    <string name="has_account">Sudah memiliki akun? <b>Login disini</b></string>
    <string name="information">Informasi</string>
    <string name="list_data">List Data</string>
    <string name="input">Input Data</string>
    <string name="logout">Logout</string>
    <string name="name">Nama</string>
    <string name="age">Umur</string>
    <string name="save">Simpan</string>
    <string name="motto">Motto</string>
    <string name="update">Update Data</string>
    <string name="search_data">Cari Data</string>
</resources>