<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/information"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_information"
        android:text="@string/list_data"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_list"
        android:text="@string/input"
        app:cornerRadius="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/btn_input"
        app:cornerRadius="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>